[project]
name = "gaussian-splatting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rowan Torbitzky-Lane", email = "rowan.a.tl@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "plyfile>=1.1.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[project.scripts]
gaussian-splatting = "gaussian_splatting:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
